--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# Directories
-.vs/
-Binaries/
+# Binaries
+**/bin/
+bin-int/
+Intermediates/
 
-# Files
-*.vcxproj
-*.vcxproj.user
-*.vcxproj.filters
-*.sln
+# Hazel files
 *.log
-Makefile
 
-# Exclude
-!Vendor/Binaries
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+**.csproj
+
+# Directories
+Hazel/vendor/VulkanSDK
+Hazelnut/assets/cache
+scripts/__pycache__
