--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ Intermediates/
 Hazel/vendor/VulkanSDK
 Hazelnut/assets/cache
 scripts/__pycache__
+Game/Binaries/Debug/x86_64/Game.pdb
+/Game/Binaries
+/Binaries
