--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-# Binaries
+# Dirs
 Binaries/
 Intermediates/
-**/Binaries/
-**/Intermediates/
-
-# Hazel files
-*.log
+*/Binaries/
+*/Intermediates/
+*/obj/
 
 # Visual Studio files and folder
 .vs/
@@ -14,11 +12,6 @@ Intermediates/
 **.vcxproj.filters
 **.vcxproj.user
 **.csproj
-
-# Directories
-Hazel/vendor/VulkanSDK
-Hazelnut/assets/cache
-scripts/__pycache__
-Game/Binaries/Debug/x86_64/Game.pdb
-/Game/Binaries
-/Binaries
+**.lib
+**.pdb
+**.idb
