--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Dirs
-Binaries/
-Intermediates/
-*/Binaries/
-*/Intermediates/
-*/obj/
+**/Binaries
+**/Intermediates
+**/obj
 
 # Visual Studio files and folder
 .vs/
@@ -15,3 +13,35 @@ Intermediates/
 **.lib
 **.pdb
 **.idb
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
